--- a/index8.html
+++ b/index8.html
@@ -13,6 +13,7 @@
     <!-- <button onclick="document.getElementById('nihal').style.display='none'">click</button> -->
     <!-- <button onclick="document.getElementById('nihal').style.display='block'">click</button> -->
     <button onclick="window.print()">click</button>
+    <button onclick="window.print()">click</button>
 
 
 <script>
